crates/compiler/parser/tests/snapshots/toplevel::namespace_with_function.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
namespace Utils { fn helper() -> felt { return 1; } }
--- AST ---
[
    Namespace(
        Spanned(
            Namespace {
                name: Spanned(
                    "Utils",
                    10..15,
                ),
                body: [
                    Function(
                        Spanned(
                            FunctionDef {
                                name: Spanned(
                                    "helper",
                                    21..27,
                                ),
                                params: [],
                                return_type: Named(
                                    Felt,
                                ),
                                body: [
                                    Spanned(
                                        Return {
                                            value: Some(
                                                Spanned(
                                                    Literal(
                                                        1,
                                                    ),
                                                    47..48,
                                                ),
                                            ),
                                        },
                                        40..49,
                                    ),
                                ],
                            },
                            18..51,
                        ),
                    ),
                ],
            },
            0..53,
        ),
    ),
]
