crates/compiler/parser/tests/snapshots/toplevel::nested_path_import.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
from very.deep.module.path import function
--- AST ---
[
    Import(
        Spanned(
            ImportStmt {
                path: [
                    Spanned(
                        "very",
                        5..9,
                    ),
                    Spanned(
                        "deep",
                        10..14,
                    ),
                    Spanned(
                        "module",
                        15..21,
                    ),
                    Spanned(
                        "path",
                        22..26,
                    ),
                ],
                item: Spanned(
                    "function",
                    34..42,
                ),
                alias: None,
            },
            0..42,
        ),
    ),
]
