crates/compiler/parser/tests/snapshots/toplevel::simple_struct.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
struct Point { x: felt, y: felt }
--- AST ---
[
    Struct(
        Spanned(
            StructDef {
                name: Spanned(
                    "Point",
                    7..12,
                ),
                fields: [
                    (
                        Spanned(
                            "x",
                            15..16,
                        ),
                        Named(
                            Felt,
                        ),
                    ),
                    (
                        Spanned(
                            "y",
                            24..25,
                        ),
                        Named(
                            Felt,
                        ),
                    ),
                ],
            },
            0..33,
        ),
    ),
]
