crates/compiler/parser/tests/snapshots/toplevel::struct_with_pointers.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
struct Node { data: felt, next: Node* }
--- AST ---
[
    Struct(
        Spanned(
            StructDef {
                name: Spanned(
                    "Node",
                    7..11,
                ),
                fields: [
                    (
                        Spanned(
                            "data",
                            14..18,
                        ),
                        Named(
                            Felt,
                        ),
                    ),
                    (
                        Spanned(
                            "next",
                            26..30,
                        ),
                        Pointer(
                            Named(
                                Custom(
                                    "Node",
                                ),
                            ),
                        ),
                    ),
                ],
            },
            0..39,
        ),
    ),
]
