crates/compiler/parser/tests/snapshots/toplevel::trailing_comma_function_params.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test(a: felt, b: felt,) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "a",
                            10..11,
                        ),
                        type_expr: Named(
                            "felt",
                        ),
                    },
                    Parameter {
                        name: Spanned(
                            "b",
                            19..20,
                        ),
                        type_expr: Named(
                            "felt",
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..32,
        ),
    ),
]
